<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">L019_HW_4</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Имя пациента</string>
    <string name="davlenie">Давление пациента</string>
    <string name="sugar">Показания сахара в кровиS</string>
    <string name="puls">Пульс пациента</string>
    <string name="weight">Вес пациента</string>

</resources>
